main/default/objects/Sprint__c/fields/Actual_Hours__c.field-meta.xml
<CustomField>
    <fullName>Actual_Hours__c</fullName>
    <description>Sum the Actual Hours logged in Project Task Log for all Dev, QA, and Bug tasks related to the sprint</description>
    <label>Actual Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>