main/default/objects/Sprint__c/fields/Add_Sprint_Goal__c.field-meta.xml
<CustomField>
    <fullName>Add_Sprint_Goal__c</fullName>
    <label>Sprint Goal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>