main/default/objects/Sprint__c/fields/Estimated_Hours__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Hours__c</fullName>
    <description>Sum the Estimated Hours for all Dev, QA, and Bug tasks related to the sprint</description>
    <label>Estimated Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>