main/default/objects/Sprint__c/fields/Focus_for_next_sprint_or_release__c.field-meta.xml
<CustomField>
    <fullName>Focus_for_next_sprint_or_release__c</fullName>
    <label>Focus for next sprint or release</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>