main/default/objects/Sprint__c/fields/Retrospective_Session_Date__c.field-meta.xml
<CustomField>
    <fullName>Retrospective_Session_Date__c</fullName>
    <label>Retrospective Session Date</label>
    <type>Date</type>
</CustomField>