main/default/objects/Sprint__c/fields/What_could_be_improved__c.field-meta.xml
<CustomField>
    <fullName>What_could_be_improved__c</fullName>
    <label>What could be improved</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>