main/default/objects/Sprint__c/fields/What_went_badly__c.field-meta.xml
<CustomField>
    <fullName>What_went_badly__c</fullName>
    <label>What went badly</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>