main/default/objects/Sprint__c/listViews/Compass_Connect.listView-meta.xml
<ListView>
    <fullName>Compass_Connect</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Estimated_Hours__c</columns>
    <columns>Actual_Hours__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project__c</field>
        <operation>contains</operation>
        <value>connect</value>
    </filters>
    <label>Compass Connect</label>
</ListView>